--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -13,9 +13,16 @@
 
 body {
     font-family: "Poppins", "Nunito Sans", Arial, sans-serif;
-    background: #222;
     color: #fff;
     height: 100vh;
+    margin: 0; 
+    padding: 0;
+    background-image: url('../pictures/srG.gif'); 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    display: grid;
+    place-items: center;
 }
 
 .card {
@@ -23,7 +30,6 @@ body {
     max-width: 470px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
@@ -93,12 +99,16 @@ body {
     text-align: left;
 }
 
-.col img {
+.col img { 
     width: 40px;
     margin-right: 10px;
 }
 
-.humidity, .wind {
+.humidity, .wind, .feels-like {
     font-size: 28px;
     margin-top: -6px;
+}
+
+.weather {
+    display: none;
 }
